2014-11-25  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/_default_fcntl.h: Move all Cygwin-specific open
	flags from Cygwin's fcntl.h here.  Remove check for WIN32.  Remove
	Windows-specific macros.

2014-11-23  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/resource.h: Add prototype for getrusage()
	to <sys/resource.h>

2014-11-21  Nick Clifton  <nickc@redhat.com>

	PR target/63901
	* configure.host (msp430): Add -mhwmult=none to newlib_cflags.

2014-11-20  Peter A. Bigot  <pab@pabigot.com>

	* libc/stdio/nano-vfprintf_i.c (_printf_i): Use LONGINT when void* is
	larger than an int.

2014-11-20  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/sys/syslimits.h (NGROUPS_MAX): Adjust value so
	that NGROUPS is even.

2014-11-12  Jon Beniston  <jon@beniston.com>

	* libc/stdlib/strtod.c (sulp): Cast to int32_t to avoid overflow.
	* libc/time/gmtime_r.c (DAYS_PER_*_YEARS): Convert to long constants
	to avoid overflow.

2014-11-10  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strcpy.S: New file.
	* libc/machine/aarch64/strcpy-stub.S: New file.
	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add new files.
	* libc/machine/aarch64/Makefile.in: Regenerate.

2014-11-06  Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.in: Add autoconf test to determine size of uintptr_t.
	* newlib.hin: Add new autoconf feature variables.
	* libc/include/inttypes.h: Use new feature variables.
	* configure: Regenerate.

2014-11-06  Terry Guo  <terry.guo@arm.com>

	* libc/stdio/nano-vfprintf_i.c (_printf_i): Use Newlib approach to
	handle string that might be not nul-terminated.
	* testsuite/newlib.stdio/nulprintf.c: New test.

2014-10-29  Jon Turney  <jon.turney@dronecode.org.uk>

	* libc/include/string.h: Correct guard for strcasecmp().

2014-10-29  Terry Guo  <terry.guo@arm.com>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Remove unnecessary comparison.
